tests/type/good/control.gbl
player p { dollars: 100$, chance: 50%, streak: 0x }

fn pick(x: int) -> int {
	if x > 0 {
		return 1;
	} else {
		return 0;
	}
}

fn spin() -> int {
	loop {
		return 42;
	}
}

scene main
{
	var r = pick(3);
}
